--- a/index.html
+++ b/index.html
@@ -457,10 +457,10 @@
               </p>
 
               <div class="testimonial-author">
-                <img src="images/avatars/user-03.jpg" alt="Photo de l'auteur" />
+                <img src="images/avatars/user-01.jpg" alt="Photo de l'auteur" />
                 <div class="author-info">
-                  Sophie Dubois
-                  <span>Investisseuse sportive</span>
+                  Alexandre Dubois
+                  <span>Investisseur sportif</span>
                 </div>
               </div>
             </div>
@@ -475,7 +475,7 @@
               </p>
 
               <div class="testimonial-author">
-                <img src="images/avatars/user-01.jpg" alt="Photo de l'auteur" />
+                <img src="images/avatars/user-03.jpg" alt="Photo de l'auteur" />
                 <div class="author-info">
                   Marc Durand
                   <span>Parieur expérimenté</span>
