--- a/index.html
+++ b/index.html
@@ -706,5 +706,20 @@
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
+
+    <!-- Mailchimp Integration -->
+    <script id="mcjs">
+      !(function (c, h, i, m, p) {
+        (m = c.createElement(h)),
+          (p = c.getElementsByTagName(h)[0]),
+          (m.async = 1),
+          (m.src = i),
+          p.parentNode.insertBefore(m, p);
+      })(
+        document,
+        "script",
+        "https://chimpstatic.com/mcjs-connected/js/users/2f8893ae06beb1c60978ab1b2/4d5c675f22546b9decd2c922a.js"
+      );
+    </script>
   </body>
 </html>
