--- a/index.html
+++ b/index.html
@@ -644,29 +644,136 @@
           <!-- end footer-logo -->
 
           <div class="col-four md-1-3 tab-full footer-subscribe">
-            <h4>Notre Newsletter</h4>
-
-            <p>
-              Restez informé des dernières actualités, des nouveaux tipsters et
-              des conseils pour améliorer vos paris sportifs.
-            </p>
-
-            <div class="subscribe-form">
-              <form id="mc-form" class="group" novalidate="true">
-                <input
-                  type="email"
-                  value=""
-                  name="EMAIL"
-                  class="email"
-                  id="mc-email"
-                  placeholder="Adresse Email"
-                  required=""
-                />
-
-                <input type="submit" name="subscribe" value="Envoyer" />
-
-                <label for="mc-email" class="subscribe-message"></label>
-              </form>
+            <div id="mc_embed_shell">
+              <link
+                href="//cdn-images.mailchimp.com/embedcode/classic-061523.css"
+                rel="stylesheet"
+                type="text/css"
+              />
+              <style type="text/css">
+                #mc_embed_signup {
+                  background: #fff;
+                  clear: left;
+                  font: 14px Helvetica, Arial, sans-serif;
+                  width: 600px;
+                }
+                /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+                       We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+              </style>
+              <div id="mc_embed_signup">
+                <form
+                  action="https://app.us18.list-manage.com/subscribe/post?u=2f8893ae06beb1c60978ab1b2&amp;id=bbc37c8ef1&amp;f_id=008ca5e6f0"
+                  method="post"
+                  id="mc-embedded-subscribe-form"
+                  name="mc-embedded-subscribe-form"
+                  class="validate"
+                  target="_blank"
+                >
+                  <div id="mc_embed_signup_scroll">
+                    <h2>S'abonner à la newsletter de Tipster Market</h2>
+                    <div class="indicates-required">
+                      <span class="asterisk">*</span> indique "obligatoire"
+                    </div>
+                    <div class="mc-field-group">
+                      <label for="mce-EMAIL"
+                        >Adresse e-mail <span class="asterisk">*</span></label
+                      ><input
+                        type="email"
+                        name="EMAIL"
+                        class="required email"
+                        id="mce-EMAIL"
+                        required=""
+                        value=""
+                      />
+                    </div>
+                    <div id="mce-responses" class="clear foot">
+                      <div
+                        class="response"
+                        id="mce-error-response"
+                        style="display: none"
+                      ></div>
+                      <div
+                        class="response"
+                        id="mce-success-response"
+                        style="display: none"
+                      ></div>
+                    </div>
+                    <div
+                      aria-hidden="true"
+                      style="position: absolute; left: -5000px"
+                    >
+                      /* real people should not fill this in and expect good
+                      things - do not remove this or risk form bot signups */
+                      <input
+                        type="text"
+                        name="b_2f8893ae06beb1c60978ab1b2_bbc37c8ef1"
+                        tabindex="-1"
+                        value=""
+                      />
+                    </div>
+                    <div class="optionalParent">
+                      <div class="clear foot">
+                        <input
+                          type="submit"
+                          name="subscribe"
+                          id="mc-embedded-subscribe"
+                          class="button"
+                          value="Subscribe"
+                        />
+                        <p style="margin: 0px auto">
+                          <a
+                            href="http://eepurl.com/jjZsRY"
+                            title="Avec Mailchimp, les campagnes de marketing par e-mail sont un jeu d'enfant"
+                            ><span
+                              style="
+                                display: inline-block;
+                                background-color: transparent;
+                                border-radius: 4px;
+                              "
+                              ><img
+                                class="refferal_badge"
+                                src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg"
+                                alt="Intuit&nbsp;Mailchimp"
+                                style="
+                                  width: 220px;
+                                  height: 40px;
+                                  display: flex;
+                                  padding: 2px 0px;
+                                  justify-content: center;
+                                  align-items: center;
+                                " /></span
+                          ></a>
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </form>
+              </div>
+              <script
+                type="text/javascript"
+                src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"
+              ></script>
+              <script type="text/javascript">
+                (function ($) {
+                  window.fnames = new Array();
+                  window.ftypes = new Array();
+                  fnames[0] = "EMAIL";
+                  ftypes[0] = "email";
+                  fnames[1] = "FNAME";
+                  ftypes[1] = "text";
+                  fnames[2] = "LNAME";
+                  ftypes[2] = "text";
+                  fnames[3] = "ADDRESS";
+                  ftypes[3] = "address";
+                  fnames[4] = "PHONE";
+                  ftypes[4] = "phone";
+                  fnames[5] = "BIRTHDAY";
+                  ftypes[5] = "birthday";
+                  fnames[6] = "COMPANY";
+                  ftypes[6] = "text";
+                })(jQuery);
+                var $mcj = jQuery.noConflict(true);
+              </script>
             </div>
           </div>
           <!-- end footer-subscribe -->
@@ -706,20 +813,5 @@
     <script src="js/jquery-2.1.3.min.js"></script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-
-    <!-- Mailchimp Integration -->
-    <script id="mcjs">
-      !(function (c, h, i, m, p) {
-        (m = c.createElement(h)),
-          (p = c.getElementsByTagName(h)[0]),
-          (m.async = 1),
-          (m.src = i),
-          p.parentNode.insertBefore(m, p);
-      })(
-        document,
-        "script",
-        "https://chimpstatic.com/mcjs-connected/js/users/2f8893ae06beb1c60978ab1b2/4d5c675f22546b9decd2c922a.js"
-      );
-    </script>
   </body>
 </html>
