--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <section
       id="home"
       data-parallax="scroll"
-      data-image-src="images/hero-bg.jpg"
+      data-image-src="images/background.png"
       data-natural-width="3000"
       data-natural-height="2000"
     >
@@ -104,11 +104,8 @@
 
           <div class="home-image-right">
             <img
-              src="images/iphone-app-470.png"
-              srcset="
-                images/iphone-app-470.png 1x,
-                images/iphone-app-940.png 2x
-              "
+              src="images/mobile.png"
+              srcset="images/mobile.png 1x, images/mobile.png 2x"
               data-aos="fade-up"
             />
           </div>
@@ -332,7 +329,7 @@
       </div>
       <!-- end about-how -->
 
-      <div class="row about-bottom-image">
+      <!-- <div class="row about-bottom-image">
         <img
           src="images/app-screens-1200.png"
           srcset="
@@ -344,7 +341,7 @@
           alt="Captures d'écran de l'application"
           data-aos="fade-up"
         />
-      </div>
+      </div> -->
       <!-- end about-bottom-image -->
     </section>
     <!-- end about -->
