change tm to pdo

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8" />
-    <title>Tipster Market - Les Meilleurs Tipsters en France</title>
+    <title>Prono d'Or - Les Meilleurs Tipsters en France</title>
     <meta
       name="description"
       content="Découvrez les meilleurs tipsters avec leurs statistiques détaillées : ROI, win rate, cote moyenne. La référence pour identifier les vrais experts du paris sportif."
     />
-    <meta name="author" content="Tipster Market" />
+    <meta name="author" content="Prono d'Or" />
 
     <!-- mobile specific metas
    ================================================== -->
@@ -42,7 +42,7 @@
    ================================================== -->
     <header id="header" class="row">
       <div class="header-logo">
-        <a href="index.html">Tipster Market</a>
+        <a href="index.html">Prono d'Or</a>
       </div>
 
       <nav id="header-nav-wrap">
@@ -86,7 +86,7 @@
       <div class="home-content">
         <div class="row contents">
           <div class="home-content-left">
-            <h3 data-aos="fade-up">Bienvenue sur Tipster Market</h3>
+            <h3 data-aos="fade-up">Bienvenue sur Prono d'Or</h3>
 
             <h1 data-aos="fade-up">
               Découvrez les Vrais <br />
@@ -104,8 +104,11 @@
 
           <div class="home-image-right">
             <img
-              src="images/mobile.png"
-              srcset="images/mobile.png 1x, images/mobile.png 2x"
+              src="images/logo-pdo-mobile.png"
+              srcset="
+                images/logo-pdo-mobile.png 1x,
+                images/logo-pdo-mobile.png 2x
+              "
               data-aos="fade-up"
             />
           </div>
@@ -134,16 +137,6 @@
             <i class="fa fa-play-circle"></i>
           </a>
         </li>
-        <li>
-          <a
-            href="https://x.com/market_tip36353?t=Afb8F_ZOSuLTeouXuzsq4g&s=08"
-            target="_blank"
-            rel="noopener"
-            title="X (Twitter)"
-          >
-            <i class="fa fa-twitter"></i>
-          </a>
-        </li>
       </ul>
       <!-- end home-social-list -->
 
@@ -162,13 +155,13 @@
       <div class="row about-intro">
         <div class="col-four">
           <h1 class="intro-header" data-aos="fade-up">
-            À Propos de Tipster Market
+            À Propos de Prono d'Or
           </h1>
         </div>
         <div class="col-eight">
           <p class="lead" data-aos="fade-up">
-            Tipster Market est la première plateforme française qui vous permet
-            de découvrir les vrais meilleurs tipsters avec des statistiques
+            Prono d'Or est la première plateforme française qui vous permet de
+            découvrir les vrais meilleurs tipsters avec des statistiques
             transparentes et vérifiées. Que vous découvriez des tipsters sur
             Telegram, TikTok ou ailleurs, vérifiez leurs performances avec nos
             données fiables : ROI, win rate, cote moyenne et classement en temps
@@ -283,7 +276,7 @@
 
       <div class="row about-how">
         <h1 class="intro-header" data-aos="fade-up">
-          Comment Fonctionne Tipster Market ?
+          Comment Fonctionne Prono d'Or ?
         </h1>
 
         <div class="about-how-content" data-aos="fade-up">
@@ -448,7 +441,7 @@
               <p>
                 "L'abonnement premium est un investissement intelligent. Au lieu
                 de payer 20-30€ par mois pour suivre 3-4 tipsters différents, je
-                paie 10€ et j'ai accès à tous les tipsters de la plateforme. Je
+                paie 15€ et j'ai accès à tous les tipsters de la plateforme. Je
                 peux comparer leurs performances et choisir les meilleurs selon
                 mes critères. C'est révolutionnaire !"
               </p>
@@ -513,7 +506,7 @@
       <div class="row">
         <div class="col-full">
           <h1 class="intro-header" data-aos="fade-up">
-            Téléchargez Tipster Market dès aujourd'hui !
+            Téléchargez Prono d'Or dès aujourd'hui !
           </h1>
 
           <p class="lead" data-aos="fade-up">
@@ -533,7 +526,7 @@
               style="margin-top: 2rem; text-align: center"
             >
               <a
-                href="https://www.instagram.com/tipster.market?utm_source=qr&igsh=a2NmZW1vMXV5ZTNv"
+                href="https://www.instagram.com/pronodor_officiel/"
                 target="_blank"
                 rel="noopener"
                 style="
@@ -551,7 +544,7 @@
                 >Instagram
               </a>
               <a
-                href="https://www.tiktok.com/@tipster.market?_t=ZN-8yKB3hWinv4&_r=1"
+                href="https://www.tiktok.com/@pronodor_officiel"
                 target="_blank"
                 rel="noopener"
                 style="
@@ -566,24 +559,6 @@
                 "
               >
                 <i class="fa fa-music" style="margin-right: 8px"></i>TikTok
-              </a>
-              <a
-                href="https://x.com/market_tip36353?t=Afb8F_ZOSuLTeouXuzsq4g&s=08"
-                target="_blank"
-                rel="noopener"
-                style="
-                  display: inline-block;
-                  margin: 0 10px;
-                  padding: 12px 20px;
-                  background-color: #1da1f2;
-                  color: white;
-                  text-decoration: none;
-                  border-radius: 8px;
-                  font-weight: bold;
-                "
-              >
-                <i class="fa fa-twitter" style="margin-right: 8px"></i>X
-                (Twitter)
               </a>
             </div>
           </div>
@@ -600,11 +575,11 @@
           <div class="col-four md-1-3 tab-full footer-contact">
             <h4>Contact</h4>
 
-            <p>contact@tipstermarket.fr</p>
+            <p>pronodor.app@gmail.com</p>
 
             <div class="footer-social-links">
               <a
-                href="https://www.instagram.com/tipster.market?utm_source=qr&igsh=a2NmZW1vMXV5ZTNv"
+                href="https://www.instagram.com/pronodor_officiel/"
                 title="Instagram"
                 target="_blank"
                 rel="noopener"
@@ -612,20 +587,12 @@
                 <i class="fa fa-instagram"></i>
               </a>
               <a
-                href="https://www.tiktok.com/@tipster.market?_t=ZN-8yKB3hWinv4&_r=1"
+                href="https://www.tiktok.com/@pronodor_officiel"
                 title="TikTok"
                 target="_blank"
                 rel="noopener"
               >
                 <i class="fa fa-music"></i>
-              </a>
-              <a
-                href="https://x.com/market_tip36353?t=Afb8F_ZOSuLTeouXuzsq4g&s=08"
-                title="X (Twitter)"
-                target="_blank"
-                rel="noopener"
-              >
-                <i class="fa fa-twitter"></i>
               </a>
             </div>
           </div>
@@ -634,7 +601,7 @@
           <div class="col-four md-1-3 tab-full footer-logo">
             <div class="footer-logo-center">
               <a href="index.html">
-                <img src="images/logo.jpg" alt="Tipster Market Logo" />
+                <img src="images/logo-pdo.png" alt="Prono d'Or Logo" />
               </a>
             </div>
           </div>
@@ -667,7 +634,7 @@
                   target="_blank"
                 >
                   <div id="mc_embed_signup_scroll">
-                    <h2>S'abonner à la newsletter de Tipster Market</h2>
+                    <h2>S'abonner à la newsletter de Prono d'Or</h2>
                     <div class="indicates-required">
                       <span class="asterisk">*</span> indique "obligatoire"
                     </div>
@@ -783,7 +750,7 @@
         <div class="row">
           <div class="col-twelve">
             <div class="copyright">
-              <span>© Copyright Tipster Market 2025.</span>
+              <span>© Copyright Prono d'Or 2025.</span>
               <span
                 >Design par
                 <a href="http://www.styleshout.com/">styleshout</a></span
