--- a/styles.html
+++ b/styles.html
@@ -117,8 +117,11 @@
 
           <div class="home-image-right">
             <img
-              src="images/mobile.png"
-              srcset="images/mobile.png 1x, images/mobile.png 2x"
+              src="images/logo-pdo-mobile.png"
+              srcset="
+                images/logo-pdo-mobile.png 1x,
+                images/logo-pdo-mobile.png 2x
+              "
               data-aos="fade-up"
             />
           </div>
@@ -128,9 +131,6 @@
       <ul class="home-social-list">
         <li>
           <a href="#"><i class="fa fa-facebook-square"></i></a>
-        </li>
-        <li>
-          <a href="#"><i class="fa fa-twitter"></i></a>
         </li>
         <li>
           <a href="#"><i class="fa fa-instagram"></i></a>
@@ -565,9 +565,7 @@
               <li>
                 <a href="#"><i class="fa fa-facebook-square"></i></a>
               </li>
-              <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-              </li>
+
               <li>
                 <a href="#"><i class="fa fa-behance"></i></a>
               </li>
