--- a/index.html
+++ b/index.html
@@ -755,6 +755,9 @@
                 >Design par
                 <a href="http://www.styleshout.com/">styleshout</a></span
               >
+              <span style="margin-left: 2rem;">
+                <a href="policy.html" style="color: #767676; text-decoration: none;">Politique de Confidentialité</a>
+              </span>
             </div>
 
             <div id="go-top">
